# iiwa-RNEA-program

RNEA_GPU_Parallelization-main/: Get_M.py  Pgenerate.py  RNE.py  Ygenerate.pyd  close_loop_dynamics_parameters.py  requirements.txt  s  test.py  test1.py  test1.pyd  test2.py
RNEA_GPU_Parallelization-main/Python/: Numpy_RNEA_Batched.ipynb
RNEA_GPU_Parallelization-main/URDFParser/: iiwa.urdf  lower_arm.urdf  singlearm_change.urdf  upper_arm.urdf
SE3_impedance/: .gitignore  NRIC_CRBA_ABA.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
SE3_impedance/examples/: franka_se3_test.py  franka_se3_test_friction.py  nric_torque_controller.py
SE3_impedance/src/se3_impedance/: __init__.py  exp_plot_utils.py  geometry_impedance_control.py  paths.py  runtime.py  se3_controller.py
SE3_impedance/src/se3_impedance/models/franka_panda/: panda_nohand_torque.xml  scene_se3.xml
iiwa floating/: cross_force_vec.m  iiwa14_floating.slx  main_floating_iiwa.m  rnea_bpass_floating.m  rnea_fpass_floating.m  xmat0.m  xmat1.m  xmat3.m  xmat4.m  xmat6.m
iiwa14_rne_dynamics/: Polynolial_traj.py  Readme.md  Spatial Vector Algebra.md  compare_urdf_xml.py  crossOperatorFunction.m  cross_motion_vec.m  iiwa14_inertia_matrices.txt  ik_solver.py  ik_solver_md.md  main.asv  main.m  main.py  main_franka.py  main_rnea.py  matlab_vs_pinocchio_torque.fig  print_inertia_matrices.py  rnea_bpass.m  rnea_fpass.m  rnea_torque_iiwa14.m  run_ik_test.py  test.m  torque_error.fig  torque_mujoco.mat  untitled.m  xmat2.m  xmat5.m  xmat_generate.py
(+28 files in other folders)
